--- a/news/templates/news/default.html
+++ b/news/templates/news/default.html
@@ -24,6 +24,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'news:all_news' %}">News</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'news:search' %}">Search</a></li>
                     </ul>
                 </div>
             </div>
