added utils.py, checking for 3 posts per day

--- a/news/templates/news/letter.html
+++ b/news/templates/news/letter.html
@@ -8,5 +8,6 @@
     <p>Здравствуй, {{ user }}. Новая статья в твоём любимом разделе!</p>
     <h2>{{ title }}</h2>
     <p>{{ text|truncatechars:50 }}</p>
+    <p>С полным текстом статьи можно ознакомится перейдя по  <a href="{{ url }}">ссылке</a></p>
 </body>
 </html>
